[package]
name = "quadcopter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rapier3d = { version = "0.17.1", features = [ "simd-stable" ] }
kiss3d = "0.35.0"
nalgebra = "0.32.1"
gilrs = "0.10.1"
zmq = "0.10.0"
zerocopy = "0.6.1"
egui = "0.20.1"
eframe = { version = "0.20.1", features = ["persistence"] }
serde = { version = "1", features = ["derive"] }
itertools = "0.10.5"
itertools-num = "0.1.3"

[[bin]]
name = "logs"
path = "src/logs.rs"
